--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: npm install
+      - run: install -g npm@3-latest
       - run: npm ci
       - run: npm publish
         env:
