--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -25,7 +25,8 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: install -g npm@3
+      - run: npm install -g npm@3-latest
+      - run: npm install 
       - run: npm ci
       - run: npm publish
         env:
